// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`easeIn should return easeInBack cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.600, -0.280, 0.735, 0.045)",
}
`;

exports[`easeIn should return easeInCirc cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.600,  0.040, 0.980, 0.335)",
}
`;

exports[`easeIn should return easeInCubic cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.550,  0.055, 0.675, 0.190)",
}
`;

exports[`easeIn should return easeInExpo cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.950,  0.050, 0.795, 0.035)",
}
`;

exports[`easeIn should return easeInQuad cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.550,  0.085, 0.680, 0.530)",
}
`;

exports[`easeIn should return easeInQuart cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.895,  0.030, 0.685, 0.220)",
}
`;

exports[`easeIn should return easeInQuint cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.755,  0.050, 0.855, 0.060)",
}
`;

exports[`easeIn should return easeInSine cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.470,  0.000, 0.745, 0.715)",
}
`;
